--- a/home.html
+++ b/home.html
@@ -65,11 +65,9 @@
                             <a class="nav-link" href="#"><i class="fa-solid fa-face-surprise"></i> Sıra Dışı</a>
                         </li>
                     </ul>
-                    <form class="d-flex itiraf-yaz" role="search">
-                        <button class="btn btn-outline-light rounded-pill fst-italic fw-bold montserrat" type="submit"
-                            data-bs-toggle="modal" data-bs-target="#exampleModal">İtiraf
-                            Yaz <i class="fa-solid fa-pen-clip"></i></button>
-                    </form>
+                    <button class="btn btn-outline-light rounded-pill fst-italic fw-bold montserrat"
+                        data-bs-toggle="modal" data-bs-target="#exampleModal">İtiraf
+                        Yaz <i class="fa-solid fa-pen-clip"></i></button>
                 </div>
             </div>
         </nav>
@@ -89,8 +87,7 @@
                         </div>
                         <div class="content mt-3">
                             <div class="form-floating">
-                                <textarea class="form-control" style="height: 300px;"
-                                    id="floatingTextarea"></textarea>
+                                <textarea class="form-control" style="height: 300px;" id="floatingTextarea"></textarea>
                                 <label for="floatingTextarea" class="text-muted fw-bold p-2">Mesajını Bırak</label>
                             </div>
                         </div>
