--- a/home.html
+++ b/home.html
@@ -104,14 +104,14 @@
                                 Dışı</a>
                         </div>
                         <div class="modal-info-section d-flex justify-content-between">
-                            <div class="yas fw-bold text-muted ">
-                                <h3>Yaş:</h3>
+                            <div class="yas fw-bold text-muted">
+                                <h3>Yaş: </h3>
                                 <input type="number" value="18" class="form-control rounded-pill w-50">
                             </div>
-                            <div class="gender fw-bold text-muted ">
+                            <div class="gender fw-bold text-muted m-2 d-flex align-items-center">
                                 <h3>Cinsiyet:</h3>
-                                <a href="#" class="p-4"><i class="text-muted fa-solid fa-mars fa-2x"></i></a>
-                                <a href="#" class="p-4"><i class="text-muted fa-solid fa-venus fa-2x"></i></a>
+                                <a href="#" class="p-2 bg-secondary"><img src="woman.png" width="50" alt=""></a>
+                                <a href="#" class="p-2 bg-secondary"><img src="man.png" width="50" alt=""></a>
                             </div>
                         </div>
                     </div>
@@ -138,7 +138,7 @@
                     <div class="card w-75">
                         <div
                             class="card-head women p-4 text-white d-flex flex-grid align-items-center justify-content-between">
-                            <h4 class="info">Kadın - 18 Yaşında</h4> <i class="fa-solid fa-venus fa-2x"></i>
+                            <h4 class="info">Kadın - 18 Yaşında</h4> <img src="woman.png" width="30" alt="women">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title montserrat fw-bold text-muted">Card title</h5>
@@ -166,7 +166,7 @@
                     <div class="card w-75">
                         <div
                             class="card-head men p-4 text-white d-flex flex-grid align-items-center justify-content-between">
-                            <h4 class="info">Erkek - 18 Yaşında</h4> <i class="fa-solid fa-venus fa-2x"></i>
+                            <h4 class="info">Erkek - 18 Yaşında</h4> <img src="man.png" width="30" alt="women">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title montserrat fw-bold text-muted">Card title</h5>
@@ -194,7 +194,7 @@
                     <div class="card w-75">
                         <div
                             class="card-head men p-4 text-white d-flex flex-grid align-items-center justify-content-between">
-                            <h4 class="info">Erkek - 18 Yaşında</h4> <i class="fa-solid fa-venus fa-2x"></i>
+                            <h4 class="info">Erkek - 18 Yaşında</h4> <img src="man.png" width="30" alt="women">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title montserrat fw-bold text-muted">Card title</h5>
@@ -222,7 +222,7 @@
                     <div class="card w-75">
                         <div
                             class="card-head women p-4 text-white d-flex flex-grid align-items-center justify-content-between">
-                            <h4 class="info">Kadın - 18 Yaşında</h4> <i class="fa-solid fa-venus fa-2x"></i>
+                            <h4 class="info">Kadın - 18 Yaşında</h4> <img src="woman.png" width="30" alt="women">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title montserrat fw-bold text-muted">Card title</h5>
@@ -250,7 +250,7 @@
                     <div class="card w-75">
                         <div
                             class="card-head men p-4 text-white d-flex flex-grid align-items-center justify-content-between">
-                            <h4 class="info">Erkek - 18 Yaşında</h4> <i class="fa-solid fa-venus fa-2x"></i>
+                            <h4 class="info">Erkek - 18 Yaşında</h4> <img src="man.png" width="30" alt="women">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title montserrat fw-bold text-muted">Card title</h5>
@@ -278,7 +278,7 @@
                     <div class="card w-75">
                         <div
                             class="card-head men p-4 text-white d-flex flex-grid align-items-center justify-content-between">
-                            <h4 class="info">Erkek - 18 Yaşında</h4> <i class="fa-solid fa-venus fa-2x"></i>
+                            <h4 class="info">Erkek - 18 Yaşında</h4> <img src="man.png" width="30" alt="women">
                         </div>
                         <div class="card-body">
                             <h5 class="card-title montserrat fw-bold text-muted">Card title</h5>
